# VeriLog

./: .gitignore  CNAME  CODEX.md  Cargo.toml  LICENSE-OSS.md  README.md
crates/verilog-core/: Cargo.toml
crates/verilog-core/src/: crypto.rs  dp.rs  energy.rs  entry.rs  error.rs  hash.rs  lib.rs  merkle.rs  storage.rs  util.rs
crates/verilog-core/tests/: golden_vector_tests.rs  merkle_tests.rs  storage_tests.rs
crates/verilog-enterprise-api/: Cargo.toml
crates/verilog-enterprise-api/src/: error.rs  features.rs  hooks.rs  lib.rs
crates/verilog-license/: Cargo.toml
crates/verilog-license/src/: device_id.rs  error.rs  lib.rs  license.rs  store.rs
crates/verilog-license/tests/: license_tests.rs
crates/verilogd/: Cargo.toml
crates/verilogd/src/: cli.rs  config.rs  enterprise_gate.rs  main.rs  research.rs
crates/verilogd/src/admin/: dashboard.html  mod.rs
docs/: 00_project_status.md  01_architecture.md  02_storage_format.md  03_crypto.md  04_merkle_frontier.md  05_admin_console.md  06_license_and_enterprise.md  07_research_agenda.md  08_roadmap.md  09_codex_instructions.md  10_threat_model.md  11_privacy_dp.md  12_implementation_blueprint.md  13_delivery_backlog.md  14_novelty_program.md
scripts/: gen_vendor_keys.sh  sign_license.py
site/: app.js  docs.html  index.html  styles.css
