[workspace]
members = [
  "crates/verilog-core",
  "crates/verilog-enterprise-api",
  "crates/verilog-license",
  "crates/verilogd",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["VeriLog Contributors"]
repository = "https://example.com/verilog"
rust-version = "1.75"

[workspace.dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }
thiserror = "2.0"
anyhow = "1.0"
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }

# Optional admin console (individual crates may opt in with `optional = true`)
axum = "0.7"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
