[package]
name = "verilog-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
thiserror.workspace = true
hex.workspace = true
base64.workspace = true
rand.workspace = true
rand_core.workspace = true
ed25519-dalek.workspace = true

tracing.workspace = true

verilog-enterprise-api = { path = "../verilog-enterprise-api" }
