[package]
name = "verilog-license"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
hex.workspace = true
postcard.workspace = true

verilog-enterprise-api = { path = "../verilog-enterprise-api" }
